Modified build and minor changes to backend

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,5 @@ DB_NAME=replicart
 DB_USER=postgres
 DB_PASS=root
 JWT_SECRET=7xsPLDh2JPeawc2ELSNmzLtT
+SECURE=true
 FRONTEND_URL=http://localhost:4200
