--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.4",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "validator": "^13.5.2"
   },
   "description": "",
   "devDependencies": {
